2010-08-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (is-in-current-child-p): New function.

2010-08-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-mode:configure-request): Raise the window
	only when present on the current child and focus it accordingly.

2010-08-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (circulate-loop-function):
	Use is-a-key-pressed-p.

	* src/xlib-util.lisp (is-a-key-pressed-p): New predicate.

	* src/clfswm-keys.lisp (define-ungrab/grab): Use all values
	returned by xlib:keysym->keycodes.

	* src/*.lisp: Use the new child-equal-p to compare children. This
	prevent a bug with sbcl/cmucl when the standard equal function
	does not work with xlib:window.

	* src/clfswm-internal.lisp (child-equal-p): New predicate.

2010-08-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-generic-mode.lisp (generic-mode): Use an
	xlib:event-listen before processing event with
	xlib:process-event. This prevent a bug with CLX threaded
	implementation like sbcl.

	* src/clfswm.lisp (main-loop): Use an xlib:event-listen before
	processing event with xlib:process-event. This prevent a bug with
	CLX threaded implementation like sbcl.

2010-08-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/server/key.lisp (ushell-sh): Add ccl and ecl support.

	* src/xlib-util.lisp (compress-motion-notify): Use a loop instead
	of an event-case.

	* src/clfswm-internal.lisp (with-find-in-all-frames): New macro.
	(find-parent-frame, find-frame-window, find-frame-by-name)
	(find-frame-by-number): Use with-find-in-all-frames to search in
	frames in the right order.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Fix an
	unwanted flickering with unmanaged windows.

2010-08-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp: Remove event handler hooks as they're not